aks/http-svc/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  namespace: teaching-ns
spec:
  selector:
    app: http-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
