aks/http-svc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teach-that-ingress
spec:
  rules:
  - host: .learn.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-svc
            port:
              number: 80
  ingressClassName: nginx
